syntax = "proto3";

package sum;

message SumRequest {
  int32 num_1 = 1;
  int32 num_2 = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message EachNumberResponse {
  int32 num = 1;
}


service SumService {
 rpc Sum (SumRequest) returns (SumResponse);
 rpc PushEachNumber (SumRequest) returns (stream EachNumberResponse);
}
